--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,13 @@
+#app {
+  font-family: 'Avenir', Helvetica, Arial, sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  text-align: left;
+  color: #2c3e50;
+  margin-top: 60px;
+  padding: 5px;
+}
+
 h3 {
     margin: 40px 0 0;
   }
